Java 8 is supported because the free version of the  google cloud requred only 8 version