@@ -15,6 +15,7 @@ import org.apache.logging.log4j.Logger;
 
 import java.io.IOException;
 import java.math.BigDecimal;
+import java.util.Arrays;
 import java.util.List;
 
 import static com.epam.poker.util.constant.Attribute.*;
@@ -25,7 +26,7 @@ public class CheckEvent implements EventSocket {
     private static Lobby lobby = Lobby.getInstance();
     private static final CheckEvent instance = new CheckEvent();
     private static EventHandlerService eventHandlerService = EventHandlerService.getInstance();
-    private static final List<String> PARTS_OF_GAMES = List.of(PRE_FLOP_PART_OF_GAME,
+    private static final List<String> PARTS_OF_GAMES = Arrays.asList(PRE_FLOP_PART_OF_GAME,
             FLOP_PART_OF_GAME, TURN_PART_OF_GAME, RIVER_PART_OF_GAME);
 
     private CheckEvent() {
