@@ -14,6 +14,7 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 
 import static com.epam.poker.util.constant.Attribute.*;
@@ -24,7 +25,7 @@ public class FoldPartOfGameEvent implements EventSocket {
     private static Lobby lobby = Lobby.getInstance();
     private static final FoldPartOfGameEvent instance = new FoldPartOfGameEvent();
     private static EventHandlerService eventHandlerService = EventHandlerService.getInstance();
-    private static final List<String> PARTS_OF_GAMES = List.of(PRE_FLOP_PART_OF_GAME,
+    private static final List<String> PARTS_OF_GAMES = Arrays.asList(PRE_FLOP_PART_OF_GAME,
             FLOP_PART_OF_GAME, TURN_PART_OF_GAME, RIVER_PART_OF_GAME);
 
     private FoldPartOfGameEvent() {
